js/js.translator/testData/incremental/invalidation/jsCodeWithConstStringFromOtherModule/lib2/simpleFunction.0.6.kt
fun simpleFunction(): String {
    return js("var testObj = { $CONST_KEY: '$CONST_VALUE' }; testObj.$CONST_KEY") as String
}
